Fix Last.fm error notes not centered as intended
This got borken in the commit 28d3cae (released in v1.4.0) when the
generic "display: inline-block" definition influencing everything
within the sidebar was removed.

--- a/css/style-sidebar.css
+++ b/css/style-sidebar.css
@@ -205,6 +205,7 @@
 }
 
 #app-sidebar #lastfm-info .missing-content {
+	display: inline-block;
 	width: 100%;
 	text-align: center;
 	margin-top: 40px;
